@@ -1,5 +1,6 @@
+  * Added support for powered and detector rails
   * Added support for birch and spruce saplings
-  * Glass and mob spawners render a bit better.
+  * Glass and mob spawners render a bit better
 
 Minecraft X-Ray 2.7 Maintenance Branch 11 (2011.03.16)
 
